docroot/sites/all/themes/escrow/sass/partials/components/general/_horizontal_scroller.scss
.horizontal-scroller {
  width: 100%;
  height: 7em;
  margin: $spacing_default 0;
  overflow-x: scroll;
  overflow-y: hidden;

  .figures {
    width: 100%; /* This will be adjusted via javascript. */
    overflow: hidden;
    margin: 0 auto;

    figure {
      display: inline-block;
      width: 10em; /* Typically this will be changed on a one-off basis. */
      margin: 0 $spacing_default 0 0;

      &:last-child {
        margin-right: 0;
      }
    }
  }
}

